opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/memtrace"
bug-reports: "https://github.com/janestreet/memtrace/issues"
dev-repo: "git+https://github.com/janestreet/memtrace.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/memtrace/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.11.0"}
  "base-threads"
  "dune"         {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Streaming client for Memprof"
description: "
Generates compact traces of a program's memory use.
"
