(executables (names test trace copy) (libraries memtrace))

(rule
  (alias runtest)
  (action (run ./test.exe)))

(rule
  (alias runtest)
  (action (run ./trace.exe)))

(rule
 (targets ocamlopt.ctf.copy)
 (deps copy.exe ocamlopt.ctf)
 (action
  (run ./copy.exe ocamlopt.ctf ocamlopt.ctf.copy)))

(rule
 (targets ocamlopt.ctf.txt)
 (deps ../bin/dump_trace.exe ocamlopt.ctf)
 (action (with-stdout-to ./ocamlopt.ctf.txt (run ../bin/dump_trace.exe ocamlopt.ctf))))

(rule
 (targets ocamlopt.ctf.copy.txt)
 (deps ../bin/dump_trace.exe ocamlopt.ctf.copy)
 (action (with-stdout-to ./ocamlopt.ctf.copy.txt (run ../bin/dump_trace.exe ocamlopt.ctf.copy))))

; This test checks that copying does not change the contents.
; It should always pass.

(rule
 (alias runtest)
 (deps ocamlopt.ctf.txt ocamlopt.ctf.copy.txt)
 (action (diff ocamlopt.ctf.txt ocamlopt.ctf.copy.txt)))

; This test checks that copying leaves the file bit-for-bit the same.
; It will fail whenever the binary format changes.
; If you changed the format on purpose, just copy ocamlopt.ctf.copy to ocamlopt.ctf

(rule
 (alias runtest)
 (deps ocamlopt.ctf ocamlopt.ctf.copy)
 (action (run cmp ocamlopt.ctf ocamlopt.ctf.copy)))

